--- a/pom.xml
+++ b/pom.xml
@@ -64,10 +64,11 @@
 					<artifactId>maven-source-plugin</artifactId>
 				</plugin>
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
+					<version>3.9.0</version> <!-- Ensure this version or newer -->
 					<configuration>
-						<source>11</source>
-						<target>11</target>
+						<release>11</release>
 					</configuration>
 				</plugin>
 				<plugin>
