--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,9 @@
 # application-prod.properties
 app.environment=Production
 server.port=8083
-spring.datasource.url=jdbc:postgresql://localhost:5432/mydb
-spring.datasource.username=myuser
-spring.datasource.password=mypassword
+spring.datasource.url=jdbc:postgresql://ec2-18-219-151-53.us-east-2.compute.amazonaws.com:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=1993
 
 # Specify JPA properties
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
